tests/fixtures/invalid/dict_in_none.py
# Cannot use 'in' with Dict[str, int] and None
x: bool = {"a": 1} in None
